fixed bug on firefox, css, image path fix

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,8 +1,9 @@
-#login {
+section {
 	height: 100%;
 }
 
 .container-fluid {
+	height: 100%;
 	text-align: center;
 	font-size: 12px;
 	padding-top: 20px;
