--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+body, html {
+	height: 100%;
+}
+
 body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 13px;
+	display: block;
+	overflow: auto;
 }
